alignment of input feild flaw corrected

--- a/src/styles/admin/admission/newAdmission/AllColumns.module.css
+++ b/src/styles/admin/admission/newAdmission/AllColumns.module.css
@@ -34,11 +34,10 @@
   height: 15vh;
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 15vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   margin-right: 5vw;
 }
 
@@ -47,7 +46,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: end;
+  align-items: start;
   margin-right: 58vw;
   height: 15vh;
   display: flex;
